# django-github

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
django_github/: admin.py  apps.py  models.py  utils.py
django_github/management/commands/: github_organisation_resync.py  github_repositories_resync.py
django_github/migrations/: 0001_initial.py
testapp/: requirements.txt
testapp/inventory/: models.py
testapp/inventory/migrations/: 0001_initial.py
testapp/testapp/: settings.py  urls.py
